style.css
.btn-primary {
  text-transform: uppercase;
}
.bsc .btn-primary {
  background-color: #404040;
  border: 0;
  text-transform: uppercase;
} .bsc .btn-primary:hover {
  background-color: grey;
}

body {
  font-family: 'Open Sans', sans-serif;
  padding-top: 79px;
}

.cust-pad {
  padding: 2em 1em 2em 1em;
}

.navbar {
  padding: 2em 0 1.5em 0;
  background-color: #000;
  text-transform: uppercase;
} .navbar .navbar-header {
  margin-left: 0.5em;
} .navbar img {
  max-width: 200px;
} .navbar a {
  padding-left: 1em;
  color: white;
} .navbar .fa-bars {
  color: white;
  font-size: 2em;
  margin-left: -2em;
} .navbar a:hover {
   color: black;
   background-color: black;
 } .navbar img {
    margin-bottom: -2.5em;
 }

.carousel img{
  max-width: 100%;
} .carousel h3 {
  color: #fff;
  margin-bottom: 5%;
}

.feature {
  background-color: gray;
}

.about {
  padding: 5em 1em 5em 1em;
}

.hackpoly {
  background-image: url('images/grey_@2X-b0e4978256086c7c2f4fa0cd72a44934.png');
  font-size: 1.5em;
}
.bsc {
  background-image: url('images/bsc-bg.png');
  font-size: 1.5em;
  color: white;
}

.events {
  font-size: 160%;
  padding: 4em 0 4em 0;
  background-color: black;
  color: white;
}
.events dt {
}
.events dd {
}

.contact {
  background-color: #404040;
  color: #fff;
} .contact a {
  padding: 0 1em 0 1em;
  color: white;
} .contact a:hover {
  color: #337ab7;
}

.footer {
  background-color: #000;
  color: white;
}

/* Four main points thing */
.feature {
  background-color: black;
}
.four-pts {
  padding-top: 3em;
  min-height: 20em;
  color: white;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
}
.four-pts .overlay {
  position: absolute;
  left: 0; top: 0;
  height: 100%;
  width: 100%;
  background-color: black;
  opacity: .6;
}
.four-pts h2, .four-pts p {
  position: relative;
}
#learn-block {
  background-image: url('images/learn.jpg');
}
#do-block {
  background-image: url('images/participate.jpg');
}
#hack-block {
  background-image: url('images/compete.jpg');
}
#network-block {
  background-image: url('images/network.jpg');
}
/* End four main points thing */
/* contact page */
.eboard-members {
  margin-top: 35px;
  color: white;
}
.eboard-members a {
  color: white;
}

